# hapsim-lite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: performance.ipynb
hapsim_lite/: __init__.py  __main__.py  generate.py  population.py  vcf.py
tests/hapsim_lite/: __init__.py  test_generate.py  test_population.py  test_vcf.py
